sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:10: error: '<-' expected but ')' found.
	for (j-<0 to i){
                      ^AlgBubbleSort2:17: error: illegal start of simple expression
}
^